--- a/assets/css/creative-studio.css
+++ b/assets/css/creative-studio.css
@@ -26,7 +26,7 @@
   --breakpoint-md: 768px;
   --breakpoint-lg: 992px;
   --breakpoint-xl: 1200px;
-  --font-family-sans-serif: "Fira Sans", sans-serif;
+
   --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
 
@@ -37,7 +37,8 @@
 }
 
 html {
-  font-family: sans-serif;
+  font-family: 'Montserrat', sans-serif;
+  font-family: 'Roboto', sans-serif;
   line-height: 1.15;
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
@@ -11768,12 +11769,12 @@ pre .code {
     width: 80%;
   }
 }
-
 .header {
   height: 100%;
   min-height: 600px;
   background: url(../imgs/header.jpg) no-repeat center center fixed;
   background-size: cover;
+  font-family: 'Playball', cursive;
 }
 
 .header .overlay {
@@ -11889,7 +11890,7 @@ section.has-bg-img:after {
   top: 0;
   right: 0;
   bottom: 0;
-  background-image: url(../imgs/section.jpg);
+  background-image: url(../imgs/nen.JPG);
   background-position: center center;
   background-attachment: fixed;
   background-repeat: no-repeat;
@@ -11979,7 +11980,7 @@ section .section-title {
   align-items: center;
   height: 100vh;
   font-family: 'Poppins', sans-serif;
-  background: url("https://images.unsplash.com/photo-1516912481808-3406841bd33c?ixlib=rb-0.3.5&q=85&fm=jpg&crop=entropy&cs=srgb&ixid=eyJhcHBfaWQiOjE0NTg5fQ&s=183f2924ba5a8429441804609b2d4f61") no-repeat center / cover;
+  background: url("../imgs/lovestory2.jpg") no-repeat center / cover;
 }
 .date::before {
   content: "";
@@ -12005,7 +12006,7 @@ section .section-title {
   height: 200px;
   padding: 20px;
   color: #fff;
-  background: #262626 url("https://images.unsplash.com/photo-1516912481808-3406841bd33c?ixlib=rb-0.3.5&q=85&fm=jpg&crop=entropy&cs=srgb&ixid=eyJhcHBfaWQiOjE0NTg5fQ&s=183f2924ba5a8429441804609b2d4f61") no-repeat center / cover;
+  background: #262626 url("../imgs/lovestory2.jpg") no-repeat center / cover;
   text-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
   box-sizing: border-box;
 }
