--- a/assets/css/creative-studio.css
+++ b/assets/css/creative-studio.css
@@ -12062,6 +12062,25 @@ section .section-title {
   cursor: pointer;
 }
 
+* {box-sizing:border-box}
+
+/* Slideshow container */
+* {box-sizing:border-box}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+
+/* Hide the images by default */
+
+
+
+
+
+
 
 
  
